Bug 1403714 - Only regard max_fs when set explicitly. r=dminor

MozReview-Commit-ID: DczP0bq96AW